--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -22,10 +22,18 @@ jobs:
         shell: bash -l {0}
         run: python setup.py sdist bdist_wheel
       
-      - name: Publish package to PyPI
-        if: github.repository == 'toncenter/pytonlib' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+      - name: Publish package to test PyPI
+        if: github.repository == 'toncenter/pytonlib' && github.event_name == 'push'
         uses: pypa/gh-action-pypi-publish@master
         with:
           user: __token__
           password: ${{ secrets.TEST_PYPI_PASSWORD }}
           repository_url: https://test.pypi.org/legacy/
+
+      # - name: Publish package to PyPI
+      #   if: github.repository == 'toncenter/pytonlib' && github.event_name == 'push' && startsWith(github.ref, 'refs/tags') && github.ref == 'refs/heads/main'
+      #   uses: pypa/gh-action-pypi-publish@master
+      #   with:
+      #     user: __token__
+      #     password: ${{ secrets.PYPI_PASSWORD }}
+      #     repository_url: https://upload.pypi.org/legacy/
