Fixed 'Run tests' step

--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -58,6 +58,7 @@ jobs:
       - name: Run tests
         shell: bash -l {0}
         run: |
+          python -m pip install pytest-asyncio==0.18.3
           PYTHONPATH=./ pytest --asyncio-mode=strict tests/
       - name: Publish package to test PyPI
         if: ${{ github.repository == 'toncenter/pytonlib' && github.event_name == 'push' }}
@@ -92,6 +93,7 @@ jobs:
       - name: Run tests
         shell: bash -l {0}
         run: |
+          python -m pip install pytest-asyncio==0.18.3
           PYTHONPATH=./ pytest --asyncio-mode=strict tests/
       - name: Publish package to PyPI
         uses: pypa/gh-action-pypi-publish@master
