--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -20,10 +20,9 @@ jobs:
           format: "${major}.${minor}.${patch}a${increment}"
           bump_each_commit: false
     outputs:
-      version: ${{ steps.versioning.outputs.version }}
-      version_tag: ${{ steps.versioning.outputs.version_tag }}
-  build_test_wheel:
-    runs-on: "ubuntu-latest"
+      version: ${{ github.repository == 'toncenter/pytonlib' && github.event_name == 'push' && github.ref == 'refs/heads/main' && steps.versioning.outputs.version_tag || steps.versioning.outputs.version}}
+  build_wheel:
+    runs-on: ubuntu-20.04
     needs: [ set_version ]
     steps:
       - name: Checkout source
@@ -47,8 +46,26 @@ jobs:
       - name: Run tests
         shell: bash -l {0}
         run: |
-          python -m pip install pytest-asyncio==0.18.3
+          python -m pip install ./*.whl
           PYTHONPATH=./ pytest --asyncio-mode=strict tests/ || echo "Warning! Some tests failed"
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: pytonlib-package
+          path: |
+            dist/*.whl
+            dist/*.tar.gz
+  upload-pypi:
+    runs-on: ubuntu-20.04
+    needs: [ build_wheel ]
+    steps:
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: pytonlib-package
+      - name: Check
+        shell: bash -l {0}
+        run: ls -la
       - name: Publish package to test PyPI
         if: ${{ github.repository == 'toncenter/pytonlib' && github.event_name == 'push' }}
         uses: pypa/gh-action-pypi-publish@master
@@ -56,48 +73,15 @@ jobs:
           user: __token__
           password: ${{ secrets.TEST_PYPI_PASSWORD }}
           repository_url: https://test.pypi.org/legacy/
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: test-package
-          path: |
-            dist/*.whl
-            dist/*.tar.gz
-  build_release_wheel:
-    runs-on: "ubuntu-latest"
-    if: ${{ github.repository == 'toncenter/pytonlib' && github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-    needs: [set_version]
-    steps:
-      - name: Checkout source
-        uses: actions/checkout@v2
-      - name: Set up Python 3.8
-        uses: actions/setup-python@v1
-        with:
-          python-version: 3.8
-      - name: Install build dependencies
-        run: |
-          python -m pip install build wheel
-          python -m pip install -r requirements.txt
-      - name: Build distributions
-        shell: bash -l {0}
-        run: PYTONLIB_VERSION=${{ needs.set_version.outputs.version_tag }} python setup.py sdist bdist_wheel
-      - name: Check distributions
-        shell: bash -l {0}
-        run: | 
-          echo $(pwd)
-          ls $(pwd)/
-      - name: Run tests
-        shell: bash -l {0}
-        run: |
-          python -m pip install pytest-asyncio==0.18.3
-          PYTHONPATH=./ pytest --asyncio-mode=strict tests/ || echo "Warning! Some tests failed"
       - name: Publish package to PyPI
+        if: ${{ github.repository == 'toncenter/pytonlib' && github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         uses: pypa/gh-action-pypi-publish@master
         with:
           user: __token__
           password: ${{ secrets.PYPI_PASSWORD }}
           repository_url: https://upload.pypi.org/legacy/
       - name: Create release tag
+        if: ${{ github.repository == 'toncenter/pytonlib' && github.event_name == 'push' && github.ref == 'refs/heads/main' }}
         uses: actions/github-script@v3
         with:
           github-token: ${{ github.token }}
@@ -108,10 +92,3 @@ jobs:
               ref: `refs/tags/${{ needs.set_version.outputs.version_tag }}`,
               sha: context.sha
             })
-      - name: Upload release artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: release-package
-          path: |
-            dist/*.whl
-            dist/*.tar.gz
