--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -64,9 +64,9 @@ jobs:
         with:
           name: pytonlib-package
           path: dist
-      - name: Check
+      - name: Check distributions
         shell: bash -l {0}
-        run: ls -la && ls-la dist/
+        run: ls -la dist/
       - name: Publish package to test PyPI
         if: ${{ github.repository == 'toncenter/pytonlib' && github.event_name == 'push' }}
         uses: pypa/gh-action-pypi-publish@master
