--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -27,13 +27,13 @@ jobs:
     steps:
       - name: Checkout source
         uses: actions/checkout@v2
-      - name: Set up Python 3.12
+      - name: Set up Python 3.10
         uses: actions/setup-python@v1
         with:
-          python-version: 3.12
+          python-version: 3.10
       - name: Install build dependencies
         run: |
-          python -m pip install build wheel
+          python -m pip install build wheel setuptools
           python -m pip install -r requirements.txt
       - name: Build distributions
         shell: bash -l {0}
