--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -22,18 +22,18 @@ jobs:
     outputs:
       version: ${{ github.repository == 'toncenter/pytonlib' && github.event_name == 'push' && github.ref == 'refs/heads/main' && steps.versioning.outputs.version_tag || steps.versioning.outputs.version}}
   build_wheel:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs: [ set_version ]
     steps:
       - name: Checkout source
         uses: actions/checkout@v2
-      - name: Set up Python 3.8
+      - name: Set up Python 3.10
         uses: actions/setup-python@v1
         with:
-          python-version: 3.8
+          python-version: 3.10.16
       - name: Install build dependencies
         run: |
-          python -m pip install build wheel
+          python -m pip install build wheel setuptools
           python -m pip install -r requirements.txt
       - name: Build distributions
         shell: bash -l {0}
@@ -49,18 +49,18 @@ jobs:
           python -m pip install ./*.whl
           PYTHONPATH=./ pytest --asyncio-mode=strict tests/ || echo "Warning! Some tests failed"
       - name: Upload artifacts
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: pytonlib-package
           path: |
             dist/*.whl
             dist/*.tar.gz
   upload-pypi:
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-22.04
     needs: [ set_version, build_wheel ]
     steps:
       - name: Download artifacts
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: pytonlib-package
           path: dist
@@ -69,7 +69,7 @@ jobs:
         run: ls -la dist/
       - name: Create release tag
         if: ${{ github.repository == 'toncenter/pytonlib' && github.event_name == 'push' && github.ref == 'refs/heads/main' }}
-        uses: actions/github-script@v3
+        uses: actions/github-script@v4
         with:
           github-token: ${{ github.token }}
           script: |
